--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@ body { display: flex; align-items: center; justify-content: center; min-height: 
     font-size: 1.1em; pointer-events: none;
 }
 
-/* AURA DE NOVIDADE NO BOTÃO */
 .update-aura { animation: pulseUpdate 2s infinite; }
 @keyframes pulseUpdate {
     0% { box-shadow: 0 0 0 0 rgba(255, 204, 0, 0.7); }
@@ -104,8 +103,18 @@ body { display: flex; align-items: center; justify-content: center; min-height: 
 .stats{ margin-top:8px; font-size:18px; font-weight: 800; color: var(--dark); }
 
 .click-zone { display: flex; justify-content: space-between; align-items: center; width: 100%; height: 180px; position: relative; touch-action: none; }
-.aura-wrapper { position: relative; width: 110px; height: 110px; display: flex; justify-content: center; align-items: center; }
-.aura { position: absolute; width: 150px; height: 150px; border-radius: 50%; filter: blur(25px); opacity: 0.3; background: radial-gradient(circle, rgba(255,204,0,0.5), transparent 70%); transition: 0.2s; }
+
+.aura-wrapper { 
+    position: relative; 
+    width: 140px; 
+    height: 140px; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+    overflow: hidden; 
+    border-radius: 50%;
+}
+.aura { position: absolute; width: 150px; height: 150px; border-radius: 50%; filter: blur(25px); opacity: 0.3; background: radial-gradient(circle, rgba(255,204,0,0.5), transparent 70%); transition: 0.2s; pointer-events: none; }
 
 .bee-container { position: relative; z-index: 2; animation: floatBee 3s infinite ease-in-out; cursor: pointer; transition: transform 0.05s; }
 .bee { font-size: 75px; }
@@ -117,7 +126,6 @@ body { display: flex; align-items: center; justify-content: center; min-height: 
 #active-boosts { position: absolute; top: 10px; width: 100%; display: flex; justify-content: center; gap: 8px; pointer-events: none; z-index: 5; }
 .active-boost-timer { display: flex; align-items: center; gap: 4px; background: rgba(255,255,255,0.95); padding: 4px 10px; border-radius: 12px; border: 1.5px solid var(--accent); font-size: 11px; font-weight: 900; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
 
-/* PAINEL INFERIOR ARREDONDADO EM TODOS OS LADOS */
 .main-panel { flex: 1; display: flex; flex-direction: column; overflow: hidden; background: var(--card); border-radius: 26px; box-shadow: var(--shadow); margin-bottom: 14px; }
 .tabs-header { display: flex; background: #f8f8f8; border-bottom: 1px solid #eee; flex-shrink: 0; }
 .tab-btn { flex: 1; padding: 15px; border: none; background: none; font-weight: 800; color: #999; cursor: pointer; font-size: 13px; }
@@ -127,10 +135,8 @@ body { display: flex; align-items: center; justify-content: center; min-height: 
 .tab-pane { display: none; height: 100%; flex-direction: column; }
 .tab-pane.active { display: flex; }
 
-/* ÁREAS DE ROLAGEM */
 .scroll-area { flex: 1; overflow-y: auto; padding: 15px; padding-bottom: 25px; -webkit-overflow-scrolling: touch; }
 
-/* FIXAR CABEÇALHOS (LOJA E CONQUISTAS) FORA DO SCROLL */
 .fixed-nav-header { flex-shrink: 0; background: #fff; padding: 15px 15px 5px 15px; z-index: 10; }
 
 .shop-nav, .filter-bar { display: flex; gap: 10px; margin-bottom: 5px; }
@@ -144,28 +150,32 @@ button{ width:100%; padding:15px; margin-top:8px; border:none; border-radius:15p
 button:active{ transform:translateY(2px); box-shadow:0 2px 0 #d1ad00; }
 button:disabled { background:#e0e0e0 !important; color:#aaa !important; box-shadow: none !important; opacity: 0.6; }
 
-/* CONQUISTAS */
-.ach-card { display: flex; align-items: center; padding: 12px; border-radius: 15px; background: #fcfcfc; border: 2px solid #eee; text-align: left; gap: 12px; margin-bottom: 8px; transition: 0.3s; }
-.ach-card.locked { opacity: 0.5; filter: grayscale(1); background: #f0f0f0; }
-.ach-card.unlocked.common { border-color: var(--common); background: #fff; }
-.ach-card.unlocked.rare { border-color: var(--rare); background: #ebf5ff; }
-.ach-card.unlocked.epic { border-color: var(--epic); background: #f5f0ff; }
-
 /* MODAIS */
 .modal{ position:fixed; inset:0; background:rgba(0,0,0,0.8); backdrop-filter: blur(12px); display:none; justify-content:center; align-items:center; z-index:10001; padding: 20px; }
-.modal-box{ background:#fff; width:100%; max-width:380px; border-radius:35px; overflow:hidden; box-shadow: 0 25px 60px rgba(0,0,0,0.6); border: 2px solid rgba(255,255,255,0.2); }
-.modal-header{ padding:20px; background: var(--accent); font-weight:900; display:flex; justify-content:space-between; color: var(--dark); font-size: 18px; }
+.modal-box{ background:#fff; width:100%; max-width:380px; max-height: 85svh; border-radius:35px; overflow:hidden; box-shadow: 0 25px 60px rgba(0,0,0,0.6); border: 2px solid rgba(255,255,255,0.2); display: flex; flex-direction: column; }
+.modal-header{ padding:20px; background: var(--accent); font-weight:900; display:flex; justify-content:space-between; color: var(--dark); font-size: 18px; flex-shrink: 0; }
 
-.offline-content { padding: 35px 25px; text-align: center; }
-.offline-icon-circle { width: 100px; height: 100px; background: #fff9c4; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px; font-size: 50px; box-shadow: 0 10px 20px rgba(255,204,0,0.2); }
+.modal-content-scroll { flex: 1; overflow-y: auto; padding: 20px; -webkit-overflow-scrolling: touch; }
+.modal-footer { padding: 0 20px 20px 20px; background: #fff; flex-shrink: 0; }
 
-.changelog-list { text-align: left; padding: 10px; }
+.help-block { background: #f9f9f9; border-radius: 20px; padding: 15px; margin-bottom: 15px; border: 1px solid #eee; }
+.help-block h3 { margin: 0 0 10px 0; font-size: 16px; display: flex; align-items: center; gap: 8px; color: var(--dark); }
+.help-block p { margin: 0; font-size: 13px; color: #555; line-height: 1.5; }
+.help-item { display: flex; align-items: center; gap: 10px; margin-top: 10px; font-size: 12px; font-weight: bold; color: #444; }
+
+.changelog-list { text-align: left; }
 .changelog-item { display: flex; gap: 10px; margin-bottom: 12px; font-size: 14px; line-height: 1.3; }
 
 .popup { position: absolute; background: transparent; width: 100%; font-weight: 800; font-size: 12px; color: #333; animation: slideInNotif 4s ease-in-out forwards; pointer-events: none; text-align: center; }
 @keyframes slideInNotif { 0% { transform: translateY(40px); opacity: 0; } 10% { transform: translateY(0); opacity: 1; } 90% { transform: translateY(0); opacity: 1; } 100% { transform: translateY(-40px); opacity: 0; } }
 
 .version-tag { color: rgba(255,255,255,0.7); margin-top: 15px; font-weight: bold; font-size: 13px; text-shadow: 0 2px 4px rgba(0,0,0,0.3); }
+
+.ach-card { display: flex; align-items: center; padding: 12px; border-radius: 15px; background: #fcfcfc; border: 2px solid #eee; text-align: left; gap: 12px; margin-bottom: 8px; transition: 0.3s; }
+.ach-card.locked { opacity: 0.5; filter: grayscale(1); background: #f0f0f0; }
+.ach-card.unlocked.common { border-color: var(--common); background: #fff; }
+.ach-card.unlocked.rare { border-color: var(--rare); background: #ebf5ff; }
+.ach-card.unlocked.epic { border-color: var(--epic); background: #f5f0ff; }
 </style>
 </head>
 
@@ -185,7 +195,7 @@ button:disabled { background:#e0e0e0 !important; color:#aaa !important; box-shad
         <button id="btnChangelog" style="background: #ffffff; color: #1e3799; box-shadow: 0 4px 0 #cbd5e0; font-size: 14px; padding: 12px;" onclick="openChangelog()">O QUE MUDOU?</button>
     </div>
 
-    <div class="version-tag">🎄 CHRISTMAS UPDATE v3.5.0</div>
+    <div class="version-tag">🎄 CHRISTMAS UPDATE v3.6.5</div>
 </div>
 
 <div class="game" id="gameUI">
@@ -231,7 +241,6 @@ button:disabled { background:#e0e0e0 !important; color:#aaa !important; box-shad
       </div>
       
       <div class="tabs-content" id="mainScrollArea">
-          
           <div id="upgrades" class="tab-pane active">
               <div class="scroll-area">
                 <button id="btnUpgradeClick">Upgrade Clique – 10 🍯</button>
@@ -287,7 +296,6 @@ button:disabled { background:#e0e0e0 !important; color:#aaa !important; box-shad
                   <div id="achList"></div>
               </div>
           </div>
-
       </div>
   </div>
 </div>
@@ -298,15 +306,17 @@ button:disabled { background:#e0e0e0 !important; color:#aaa !important; box-shad
             <span>O que mudou? 🎄</span>
             <span style="cursor:pointer" onclick="closeModal('changelogModal')">✖</span>
         </div>
-        <div class="offline-content" style="padding: 20px;">
+        <div class="modal-content-scroll">
             <div class="changelog-list">
-                <div class="changelog-item">📌 <span><b>Cards Fixos:</b> Filtros e categorias não somem mais ao rolar.</span></div>
-                <div class="changelog-item">🎨 <span><b>Design Premium:</b> Painel inferior agora é arredondado em todos os lados.</span></div>
-                <div class="changelog-item">🚀 <span><b>Boosts Offline:</b> Boosts agora funcionam enquanto você está fora!</span></div>
+                <div class="changelog-item">📖 <span><b>Painel Responsivo:</b> Modais agora respeitam o tamanho da tela com rolagem interna.</span></div>
+                <div class="changelog-item">💾 <span><b>Autosave:</b> Salvamento automático a cada 15 segundos ativado.</span></div>
+                <div class="changelog-item">🎨 <span><b>Design Premium:</b> Painel inferior arredondado em todos os lados.</span></div>
                 <div class="changelog-item">📈 <span><b>Eficiência Offline:</b> Produção offline aumentada para 80%.</span></div>
-                <div class="changelog-item">✨ <span><b>Alerta de Update:</b> Aura colorida indica quando há novidades.</span></div>
+                <div class="changelog-item">✅ <span><b>Ortografia:</b> Revisão completa dos textos de conquistas.</span></div>
             </div>
-            <button onclick="closeModal('changelogModal')" style="margin-top: 15px;">FECHAR</button>
+        </div>
+        <div class="modal-footer">
+            <button onclick="closeModal('changelogModal')" style="margin-top: 0;">FECHAR</button>
         </div>
     </div>
 </div>
@@ -314,10 +324,12 @@ button:disabled { background:#e0e0e0 !important; color:#aaa !important; box-shad
 <div class="modal" id="offlineModal">
     <div class="modal-box">
         <div class="modal-header">🐝 Produção de Descanso</div>
-        <div class="offline-content">
-            <div class="offline-icon-circle">🍯</div>
+        <div class="modal-content-scroll" style="text-align: center;">
+            <div style="width: 100px; height: 100px; background: #fff9c4; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px; font-size: 50px;">🍯</div>
             <h2 style="margin: 0 0 10px; font-weight: 900; color: var(--dark);">Bem-vindo de volta!</h2>
-            <p id="offlineText" style="font-size: 15px; line-height: 1.4; color: #555; margin-bottom: 25px;"></p>
+            <p id="offlineText" style="font-size: 15px; line-height: 1.4; color: #555;"></p>
+        </div>
+        <div class="modal-footer">
             <button id="btnCollectOffline" style="background:var(--xp-bar); color:white; box-shadow:0 6px 0 #2d6630; height: 60px; font-size: 18px;">REIVINDICAR MEL</button>
         </div>
     </div>
@@ -329,19 +341,40 @@ button:disabled { background:#e0e0e0 !important; color:#aaa !important; box-shad
             <span>Guia da Colmeia Real 🐝</span>
             <span style="cursor:pointer" onclick="closeModal('howToPlayModal')">✖</span>
         </div>
-        <div style="padding:20px; font-size:13px; line-height:1.4; color:#444; max-height: 70vh; overflow-y: auto;">
-            <div class="help-section"><div class="help-title">🎯 Ganhe Mel</div><p>Clique na <b>Abelha</b> ou nos <b>Alvos 🎯</b>.</p></div>
-            <div class="help-section"><div class="help-title">📈 Nível e XP</div><p>Cada clique gera XP. Níveis altos aumentam o poder e o custo!</p></div>
-            <div class="help-section"><div class="help-title">⚡ Automação</div><p>O <b>Auto-Mel</b> produz mel sozinho.</p></div>
-            <div class="help-section"><div class="help-title">💤 Sistema Offline</div><p>Com a Automação, você ganha <b>80% da produção total</b> enquanto está fora, incluindo boosts ativos!</p></div>
-            <button onclick="closeModal('howToPlayModal')">ENTENDI!</button>
+        <div class="modal-content-scroll">
+            <div class="help-block">
+                <h3>🎯 Coleta Principal</h3>
+                <p>Clique na <b>Abelha central</b> ou nos <b>Alvos 🎯</b> que aparecem. Clicar nos alvos gera bônus de precisão e XP extra!</p>
+            </div>
+            <div class="help-block">
+                <h3>⚡ Automação e Níveis</h3>
+                <p>Compre o <b>Auto-Mel</b> para colher mel sozinho. Cada ação gera XP para seu <b>Nível Real</b>. Níveis altos desbloqueiam bônus, mas aumentam custos!</p>
+            </div>
+            <div class="help-block">
+                <h3>🚀 Boosts Temporários</h3>
+                <p>Use a loja para multiplicar seu poder temporariamente:</p>
+                <div class="help-item">🌶️ Pimenta: Produção x3</div>
+                <div class="help-item">🥤 Energético: Velocidade Auto x2</div>
+                <div class="help-item">🌼 Flor: Ganho de XP x5</div>
+            </div>
+            <div class="help-block">
+                <h3>💤 Estratégia Offline</h3>
+                <p>Ao desbloquear a Automação, suas abelhas trabalham enquanto você dorme! Você coleta <b>80% da sua produção total</b> ao retornar, incluindo efeitos de boosts ativos!</p>
+            </div>
+            <div class="help-block">
+                <h3>🏆 Conquistas Reais</h3>
+                <p>Existem 200 conquistas. Cada uma desbloqueada oferece um bônus <b>permanente e acumulativo</b> para sua colmeia.</p>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button onclick="closeModal('howToPlayModal')" style="margin-top: 0;">VAMOS PRODUZIR!</button>
         </div>
     </div>
 </div>
 
 <script>
 const SAVE_KEY = "BeeRoyal_Balance_V2";
-const VERSION_KEY = "BeeRoyal_LastSeenVersion_350"; 
+const VERSION_KEY = "BeeRoyal_LastSeenVersion_365"; 
 
 let honey = 0, totalHoneyEver = 0, hPerClick = 1, clickCost = 10, level = 1;
 let currentXP = 0, nextLevelXP = 1000, autoUnlocked = false, autoLevel = 1, autoCost = 100;
@@ -357,6 +390,7 @@ const durations = [
 const boostBases = { pepper: 500, energy: 300, flower: 1000 };
 const achievements = [];
 
+/* ORTOGRAFIA REVISADA */
 const achThemes = [
     { n: "Aprendiz de Pólen", r: "common", i: "🌱" },
     { n: "Batedor de Asas", r: "common", i: "🪽" },
@@ -514,6 +548,10 @@ function executeSave(){
     setTimeout(() => indicator.classList.remove("visible"), 1000);
 }
 
+setInterval(() => {
+    if(gameLoaded) executeSave();
+}, 15000);
+
 function load(){
     initAchievements();
     const raw = localStorage.getItem(SAVE_KEY);
@@ -629,7 +667,7 @@ setInterval(() => {
     const now = Date.now();
     clickBuffer = clickBuffer.filter(t => now - t < 1000);
     const cps = clickBuffer.length;
-    document.getElementById("aura").style.transform = `scale(${1 + (cps * 0.1)})`;
+    document.getElementById("aura").style.transform = `scale(${1 + (cps * 0.15)})`;
     document.getElementById("aura").style.opacity = 0.3 + (cps * 0.1);
     achievements.forEach(a => { if(!a.u && totalHoneyEver >= a.target){ a.u = true; notify(a); executeSave(); } });
     for(let b in activeBoosts) if(activeBoosts[b] > 0) activeBoosts[b]--;
@@ -649,7 +687,7 @@ function enterGame() {
         document.getElementById('startScreen').style.display = 'none';
         document.getElementById('gameUI').style.opacity = '1';
         if(pendingOfflineHoney > 1) {
-            document.getElementById("offlineText").textContent = `Suas abelhas trabalharam enquanto você estava fora a 80% de eficiência! Você acumulou ${formatNum(pendingOfflineHoney)} de mel.`;
+            document.getElementById("offlineText").textContent = `As abelhas trabalharam a 80% de eficiência com boosts! Você coletou ${formatNum(pendingOfflineHoney)} de mel real.`;
             openModal('offlineModal');
         }
     }, 500);
