--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ input[type=range] { accent-color: var(--accent); cursor: pointer; width: 100%; }
         </div>
     </div>
 
-    <div class="version-tag" id="mainVersionDisplay">🎄 CHRISTMAS UPDATE v4.1.5</div>
+    <div class="version-tag" id="mainVersionDisplay">AGUARDANDO ATUALIZAÇÃO...</div>
 </div>
 
 <div class="game" id="gameUI">
@@ -885,14 +885,10 @@ async function handlePwaClick() {
     }
 }
 
-const GAME_VERSION = "4.1.5";
-const SAVE_KEY = "BeeRoyal_Balance_V2";
-const AUDIO_KEY = "BeeRoyal_Audio_V1";
-const MISSION_KEY = "BeeRoyal_Missions_V2";
-const THEME_KEY = "BeeRoyal_Theme_V1";
-const RECORDS_KEY = "BeeRoyal_Records_V1";
-
-const updateHistory = [
+// ==========================================
+// SISTEMA DINÂMICO DE CHANGELOG (MAX 5)
+// ==========================================
+let updateHistory = [
     {
         version: "4.1.5",
         title: "🛡️ CORREÇÃO DE MISSÕES & REROLL",
@@ -934,13 +930,24 @@ const updateHistory = [
     }
 ];
 
-function validateNum(n) {
-    if (isNaN(n) || n === undefined || n === null || n < 0) return 0;
-    return parseFloat(n);
+// Função que o desenvolvedor usa para adicionar nova atualização
+function pushNewUpdate(version, title, changes) {
+    updateHistory.unshift({ version, title, changes });
+    if(updateHistory.length > 5) updateHistory.pop();
+    renderChangelog();
+    updateVersionDisplay();
+}
+
+function updateVersionDisplay() {
+    const display = document.getElementById("mainVersionDisplay");
+    if(display && updateHistory.length > 0) {
+        display.textContent = `🎄 CHRISTMAS UPDATE v${updateHistory[0].version}`;
+    }
 }
 
 function renderChangelog() {
     const container = document.getElementById("changelogContent");
+    if(!container) return;
     container.innerHTML = "";
     updateHistory.forEach(update => {
         let blockHtml = `<div class="changelog-block"><div class="changelog-section-title">v${update.version} - ${update.title}</div><div class="changelog-list">`;
@@ -954,6 +961,17 @@ function renderChangelog() {
         blockHtml += `</div></div>`;
         container.innerHTML += blockHtml;
     });
+}
+
+const SAVE_KEY = "BeeRoyal_Balance_V2";
+const AUDIO_KEY = "BeeRoyal_Audio_V1";
+const MISSION_KEY = "BeeRoyal_Missions_V2";
+const THEME_KEY = "BeeRoyal_Theme_V1";
+const RECORDS_KEY = "BeeRoyal_Records_V1";
+
+function validateNum(n) {
+    if (isNaN(n) || n === undefined || n === null || n < 0) return 0;
+    return parseFloat(n);
 }
 
 let honey = 0, totalHoneyEver = 0, hPerClick = 1, clickCost = 10, level = 1;
@@ -1444,7 +1462,9 @@ function collectOfflineRewards() {
 }
 
 function load(){
-    initAchievements(); renderChangelog();
+    initAchievements(); 
+    renderChangelog();
+    updateVersionDisplay();
     const savedAudio = localStorage.getItem(AUDIO_KEY); if(savedAudio) audioSettings = JSON.parse(savedAudio); applyAudioSettings();
     const savedTheme = localStorage.getItem(THEME_KEY); if(savedTheme) { themeSettings = JSON.parse(savedTheme); document.getElementById('uiMainColor').value = themeSettings.mainColor; document.getElementById('uiOpacity').value = themeSettings.opacity * 100; document.getElementById('uiOpacityLabel').textContent = (themeSettings.opacity * 100) + '%'; applyTheme(); }
     const savedRecords = localStorage.getItem(RECORDS_KEY); if(savedRecords) records = JSON.parse(savedRecords);
